<resources>
    <string name="app_name">News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">News</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_aajtak">Aajtak </string>
    <string name="menu_news18">News18 </string>
    <string name="menu_developer">About Developer</string>
    <string name="menu_bbc">BBC</string>
    <string name="menu_cnn">CNN</string>
    <string name="menu_developer_profile">Developer Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>